refactor code to EDAMAM api  doc

--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
-BASE_URL = https://api.spoonacular.com
-API_KEY = e15b82c0d89e4f34bc8383478c05e50b
+# spoonacular API
+
+# BASE_URL = https://api.spoonacular.com
+# API_KEY = 4eb5330072614bd3b0c8f3925360271d
+
+
+# edamam API
+
+BASE_URL = https://api.edamam.com
+API_KEY = 11d063676944f4cdad56f7c4bdcfddcd
+APP_ID = 94ffa751
