--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
