--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
